Corrected some FindBugs findings.